--- a/Unit_2.ipynb
+++ b/Unit_2.ipynb
@@ -6,6 +6,8 @@
       "name": "Unit 2.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,18 +28,31 @@
     },
     {
       "metadata": {
+        "id": "ktYSn11qUh8V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "GHQW0Wq7dQOl",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "f7078619-1c4e-417a-dd1d-7346f76e4545"
+        "outputId": "9ac3d0dd-27f4-4b6d-88a1-39d85c7c68fb"
       },
       "cell_type": "code",
       "source": [
         "# Practice problem 1\n",
-        "import math\n",
         "\n",
         "fv = 100\n",
         "p = 3\n",
@@ -51,7 +66,7 @@
         "c = fv * math.exp(-r * p / n)\n",
         "print('the present value of c is %.4f' %c)"
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +87,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "e36bd4dc-8a2b-4766-96b9-effee9ac26c6"
+        "outputId": "62f31303-56a7-45cf-ef32-e495f88d52e4"
       },
       "cell_type": "code",
       "source": [
@@ -86,7 +101,7 @@
         "c = fv * math.exp(-r * p / n)\n",
         "print('the present value of c is %.4f' %c)"
       ],
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,20 +122,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a134bd84-40ee-4d93-ab6b-6b3eca4a4b20"
+        "outputId": "bdb3c28d-2fce-429c-92ab-da8f9bcc02f5"
       },
       "cell_type": "code",
       "source": [
         "# Practice problem 2\n",
         "\n",
         "def pv(cf=[0], p=[0], r=0.0, n=4):\n",
-        "  if len(cf) != len(p):\n",
-        "    print('cf and p are not in same length')\n",
-        "  else:\n",
-        "    result = 0\n",
-        "    for i in range(len(cf)):\n",
-        "      result += cf[i] / (1 + r / n) ** p[i]\n",
-        "    return result\n",
+        "    if len(cf) != len(p):\n",
+        "        print('cf and p are not the same length')\n",
+        "    else:\n",
+        "        result = sum(np.array(cf) / (1 + r / n) ** np.array(p))\n",
+        "        return result\n",
         "\n",
         "r = 0.08\n",
         "n = 4\n",
@@ -129,7 +142,7 @@
         "\n",
         "print('The difference is %.4f' % (pv1 - pv2))"
       ],
-      "execution_count": 26,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +161,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "567b931f-9911-410e-dbea-f57a17545e0a"
+        "outputId": "6ebd9de4-7258-47ac-ce1b-1c777d2ab43c"
       },
       "cell_type": "code",
       "source": [
@@ -160,7 +173,7 @@
         "\n",
         "print('The difference is %.4f' % (pv1 - pv2))"
       ],
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,31 +186,237 @@
     },
     {
       "metadata": {
-        "id": "0v6zP4RyoI0X",
+        "id": "cEFOwtOGpm-J",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1c1af7c0-1fc2-4bcf-dd18-dfb6a1f5dddb"
+        "outputId": "9dec53ad-ed07-492f-fa20-e57781f489ea"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "# Practice problem 3\n",
+        "\n",
+        "def pv(rate=0.0, nper=1, pmt=0.0):\n",
+        "    result = pmt * ((1 + rate) ** nper - 1) / ((1 + rate) ** nper * rate)\n",
+        "    return result\n",
+        "\n",
+        "def pmt(rate=0.0, nper=1, pv=1):\n",
+        "    result = pv * (1 + rate) ** nper * rate / ((1 + rate) ** nper - 1)\n",
+        "    return result\n",
+        "\n",
+        "L = 50000\n",
+        "r = 0.085\n",
+        "n = 12\n",
+        "p = 15 * n\n",
+        "apr = 0.09\n",
+        "\n",
+        "fee = pv(r/n, p, pmt(apr/n, p, L)) - L\n",
+        "print('the amout of fees is %.6f' % fee)"
       ],
-      "execution_count": 27,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
+          "output_type": "stream",
+          "text": [
+            "the amout of fees is 1499.230228\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Uw04yiUEe4_P",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cc373dbb-fb43-4027-b120-7c72bbe0446f"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Problem 3\n",
+        "\n",
+        "L = 500000\n",
+        "r = 0.06\n",
+        "n = 12\n",
+        "p = 30 * n\n",
+        "apr = 0.066\n",
+        "\n",
+        "fee = pv(r/n, p, pmt(apr/n, p, L)) - L\n",
+        "print('the amout of fees is %.6f' % fee)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the amout of fees is 32614.676521\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "T5NX89inhjPo",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Practice Problem 4**\n",
+        "\n",
+        "The market trades a default-free coupon bond that pays a coupon of 4.00 in six months, and makes a final payment of 104.00 (the last coupon and the principal) in one year. This bond trades at 102.00. Moreover, a six-month zero-coupon bond is traded at 98.20.\n",
+        "\n",
+        "Enter the one-year spot rate (as a number, not as a percentage, for example 0.01 for 1%) such that there are no arbitrage opportunities:"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "zxbs8pIjhOad",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0d6a709e-48f0-4f5e-91e4-e4b0ad11d493"
+      },
+      "cell_type": "code",
+      "source": [
+        "r = 104 / (102 - (4 / (100 / 98.2))) - 1\n",
+        "print('one-year spot rate is %.6f' % r)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "one-year spot rate is 0.060445\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "EvtEkJBTjn5_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Problem 4**\n",
+        "\n",
+        "A default-free coupon bond maturing in one year, that pays a coupon of 5.00 after six months and makes a final payment of 105.00 (the last coupon and the principal), trades at 104.00 today. Moreover, a six-month default-free zero-coupon bond is traded at 98, and pays 100.00 at maturity.\n",
+        "\n",
+        "Enter the price of the one-year default-free zero-coupon bond that pays 100 at maturity such that there are no arbitrage opportunities:"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "5ORcy6NLju5k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "aec33625-3d57-4b4a-851f-aac6b2523d93"
+      },
+      "cell_type": "code",
+      "source": [
+        "p = 100 / (105 / (104 - (5 / (100 / 98))))\n",
+        "print('the price is %.6f' % p)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the price is 94.380952\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "3atR5oOxkfgo",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Practice Problem 5**\n",
+        "\n",
+        "The one-year default free zero coupon bond with face value 100 trades at 96, and the three-year default free zero coupon bond with face value 100 trades at 85.\n",
+        "\n",
+        "Enter the forward rate (as a number, for example 0.01 instead of 1%) for the period between one year and three years from today, assuming compounding once a year:"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "HgL2IaUhkiJi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5bb631df-03cf-4294-be7f-bf4ad25eb9c4"
+      },
+      "cell_type": "code",
+      "source": [
+        "fr = (100 / (85 * (100 / 96))) ** (1 / 2) - 1\n",
+        "print('the forward rate is %.6f' % fr)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the forward rate is 0.062738\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "RwWIj-AKlc5M",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Problem 5**\n",
+        "\n",
+        "The one-year default free zero-coupon bond with face value 100 trades at 98, and the four-year zero coupon bond with face value 100 trades at 90.\n",
+        "\n",
+        "Enter the (annualized) forward rate (as a number, for example 0.01 instead of 1%) for the period between one year and four years from today:"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Boor7oQsle87",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "31970129-6a3a-42af-ed1f-2f8bfea012b8"
+      },
+      "cell_type": "code",
+      "source": [
+        "fr = (100 / (90 * (100 / 98))) ** (1 / 3) - 1\n",
+        "print('the forward rate is %.6f' % fr)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the forward rate is 0.028793\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
